# stretto

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  stretto
core/: parser.py  processor.py  ui.py
tests/: test_parser.py
