[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stretto"
dynamic = ["version"]
description = "CLI tool that combines two audio files with crossfade looping, normalization, and web optimization."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "theagitist" },
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
stretto = "main:app"

[tool.setuptools]
py-modules = ["main"]
packages = ["core"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
